src/static/scss/common.scss
.avatar {
  width: 45px;
  height: 45px;
  min-width: 45px;
  border-radius: 50%;
  background-image: url('/images/userdefault.png');
  background-size: cover;
  background-position: center;
  cursor: pointer;
  border: 1px solid #CACACA;

  @include tablet {
    margin-bottom: -20px;
  }

  margin-bottom:-20px;
}

.user-avatar-wrapper {
  padding-right: 15px;
  margin-right: 15px;
  min-width: 150px;

  @include tablet {
    border-right: 0px;
    margin-right: 0px;
  }

  .text-wrapper {
    padding-left: 20px;

    .name {
      font-size: 20px;
      font-weight: bold;
      cursor: pointer;
      min-width: 100px;
    }

    .user-party {
      font-size: 12px;
      color: $gray;
      text-transform: uppercase;
      display: flex;
      margin-top: .9rem;
      align-items: center;

      @include tablet {
        font-size: 10px
      }

      .icon-wrapper {
        padding-right: .5rem;
      }
    }
  }
}

.closing-date-wrapper {
  display: flex;
  align-items: center;
  padding-right: 15px;
  border-right: 1px solid $gray-light;
  margin-right: 15px;

  @include tablet {
    display: none;
  }

  .closing-date-title {
    font-weight: 300;
    font-size: 14px;
    color: $gray;
    letter-spacing: .5px;
    margin-bottom: 8px
  }
}

.progress-bar-wrapper {
  background-color: $pink-light;
  overflow: hidden;
  height: 48px;
  position: relative;

  .reaming-days {
    width: 100%;
    font-size: 16px;
    font-family: var(--bold);
    text-align: center;
    position: absolute;
    color: $white;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .progress-fill {
    background-color: $pink-base;
    height: 100%;
    margin: 0 0 0 -6px;
    transform: skewX(-15deg);
  }
}



.atricle-comment-wrapper {
  display: flex;
  font-size: 18px;
  padding: 0 35px 0 20px;
  margin-right: 20px;
  border-right: 1px solid $gray-light;

  @include tablet {
    display: none;
  }

  .counters {
    color: $gray-dark;

    p {
      font-weight: 300;
      font-size: 16px;
      margin-bottom: 0;

      &.text {
        margin: 0 12px;

      }
    }
  }
}


.banner-title {
  padding: 13rem 9rem;
  background-size: cover;
  .banner-background{
    opacity: 0;
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    transition: opacity 0.3s;
    @include tablet{
      width: auto;
      max-width: none;
      left: -50%;
    }
    &.active{
      opacity: 1;
      transition: opacity 0.3s;
    }
  }
  .is-overlay {
    background-color: #ffffff87;
  }

  .content {
    position: relative;
    z-index: 1;
    width: 75%;
    img{
      width: 30%;
      filter: brightness(0) saturate(100%) invert(8%) sepia(18%) saturate(1421%) hue-rotate(322deg) brightness(98%) contrast(91%);      
      @include tablet{
        width: 60%;
      }
    }
    /* .title {
      font-size: 4rem;
      font-weight: 900;
      @include tablet {
        font-size: 3rem;
      }
    } */
    @include tablet {
      width: 100%;
      text-align: center;

    }
  }
  .button{
    @include tablet{
      margin: 0 auto;
    }
  }

  @include tablet {
    padding: 2rem 1rem;
    font-size: 1.2rem;
  }

}

.comment-modal-wrapper {
  .content {
    .swiper-slide {}
  }
}

